--- a/templates/ex55/display.html
+++ b/templates/ex55/display.html
@@ -16,7 +16,7 @@
 <body>
   <h1>Ex 55: Text Sharing</h1>
   <section>
-    <pre>{{ text }}</pre>
+    <pre>{{ snippet }}</pre>
   </section>
   <form action="/ex55/edit" method="post">
     <input type="hidden" name="slug" value="{{ slug }}">
