--- a/templates/ex54/input.html
+++ b/templates/ex54/input.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Ex 54: URL Shortener</h1>
   <section>
-    <form method="post" action="/ex54">
+    <form method="post" action="/ex54/">
       <input type="text" id="snippet" name="long_url" required>
       <button type="submit">Shorten</button>
       {% if error %}
